--- a/manifests/kustomization.yaml
+++ b/manifests/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - helm-repository.yaml
-  - postgres
-  - rabbitmq
-  - celery-worker
+#  - postgres
+#  - rabbitmq
+#  - celery-worker
