--- a/manifests/celery-beat/deployment.yaml
+++ b/manifests/celery-beat/deployment.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: celery
+  name: celery-beat
   namespace: ffmpeg-scheduler
 spec:
   selector:
     matchLabels:
-      app: celery
+      app: celery-beat
   replicas: 1
   template:
     metadata:
       labels:
-        app: celery
+        app: celery-beat
     spec:
       containers:
       - name: celery
