--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,10 @@ services:
     env_file:
       - .env
     command: "entry_point_celery.sh"
+
+  bite:
+    build: .
+    env_file:
+      - .env
+    command: "entry_point_celery_beat.sh"
+
