--- a/manifests/celery-beat/service.yaml
+++ b/manifests/celery-beat/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: celery
-  namespace: youtube-analyser
+  name: celery-beat
+  namespace: ffmpeg-scheduler
 spec:
   ports: 
     - port: 6379
   selector:
-    app: celery 
+    app: celery-beat
