--- a/manifests/celery-worker/service.yaml
+++ b/manifests/celery-worker/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: celery
-  namespace: youtube-analyser
+  namespace: ffmpeg-scheduler
 spec:
   ports: 
     - port: 6379
