--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,4 +28,6 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: Apoorva64/ffmpeg-scheduler:latest
+          tags: apoorva64/ffmpeg-scheduler:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
