--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,17 @@ services:
       - .env
     ports:
       - "8000:8000"
-    command: "deployment/entry_point.sh"
+    command: "./deployment/entry_point.sh"
 
   worker:
     build: .
     env_file:
       - .env
-    command: "deployment/entry_point_celery.sh"
+    command: "./deployment/entry_point_celery.sh"
 
   bite:
     build: .
     env_file:
       - .env
-    command: "deployment/entry_point_celery_beat.sh"
+    command: "./deployment/entry_point_celery_beat.sh"
 
