--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.PAT }}
       -
         name: Build and push
         uses: docker/build-push-action@v5
         with:
           platforms: linux/arm64
           push: true
-          tags: ghcr.io/apoorva64/ffmpeg-scheduler/main:latest
+          tags: ghcr.io/${{ github.repository_owner }}/ffmpeg-scheduler:latest
