--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,24 +8,24 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.PAT }}
-      -
-        name: Build and push
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           platforms: linux/arm64
           push: true
-          tags: ghcr.io/apoorva64/ffmpeg-scheduler:latest
+          tags: ghcr.io/apoorva64/ffmpeg-scheduler/main:latest
