--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,35 @@ version: "3.8"
 services:
   rabbitmq:
     image: rabbitmq:3-management
+    env_file:
+      - .env
     ports:
       - "15672:15672"
       - "5672:5672"
+#
+#  server:
+#    build: .
+#    env_file:
+#      - .env
+#    ports:
+#      - "8000:8000"
+#    command: "./deployment/entry_point.sh"
+#
+#  worker:
+#    build: .
+#    env_file:
+#      - .env
+#    command: "./deployment/entry_point_celery.sh"
+#
+#  bite:
+#    build: .
+#    env_file:
+#      - .env
+#    command: "./deployment/entry_point_celery_beat.sh"
 
-  server:
-    build: .
+  postgresql:
+    image: postgres:latest
     env_file:
       - .env
     ports:
-      - "8000:8000"
-    command: "./deployment/entry_point.sh"
-
-  worker:
-    build: .
-    env_file:
-      - .env
-    command: "./deployment/entry_point_celery.sh"
-
-  bite:
-    build: .
-    env_file:
-      - .env
-    command: "./deployment/entry_point_celery_beat.sh"
-
-  postgres:
-    image: postgres:latest
+      - "5432:5432"
