--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,3 +29,6 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: ghcr.io/apoorva64/ffmpeg-scheduler/main:1.0.5
+          # github cache
+          cache-from: type=gha,scope=global
+          cache-to: type=gha,mode=max
