--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          platforms: linux/arm64
+          platforms: linux/arm64,linux/amd64
           push: true
           tags: ghcr.io/apoorva64/ffmpeg-scheduler/main:1.0.11
           # github cache
