--- a/manifests/postgres/helm-release.yaml
+++ b/manifests/postgres/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: bitnami
-        namespace: youtube-analyser
+        namespace: ffmpeg-scheduler
       interval: 24h
   values:
     storageClass: longhorn-single-replica
